<resources>
    <string name="app_name">My Application</string>
    <string name="log_in">Log in</string>
    <string name="name">Username </string>
    <string name="password">Password </string>
    <string name="btn1">Login</string>
    <string name="reset">Forgotten your password</string>
    <string name="username">username</string>
    <string name="welcome">Welcome</string>
    <string name="add_product">Add Your Product</string>
    <string name="addProduct">ADD YOUR PRODUCT</string>
    <string name="image_upload">Upload the image</string>
    <string name="nameProduct">Product Name</string>
    <string name="descriptionProduct">Product Description</string>
    <string name="quantityProduct">Quantity</string>
    <string name="priceProduct">Price</string>
    <string name="addProduct1">ADD</string>
    <string name="myProduct">My Products</string>
    <string name="name_product">Product Name -HELADIV Ice Tea Concentrate Cardial 750m</string>
    <string name="product_qty">Quantity-300</string>
    <string name="product_price">RS 3200.00</string>
    <string name="product_delete">Delete</string>
    <string name="product_update">Update</string>
    <string name="name_product1">Product Name -Green Tea| Real Brewed Tea| Gold Peak</string>
    <string name="product_qty1">Quantity-200</string>
    <string name="product_price1">Rs 4200.00</string>
    <string name="product_delete1">Delete</string>
    <string name="product_update1">Update</string>
    <string name="name_product2">Product Name -Flavored Tea Bags/ natural and organic tea</string>
    <string name="product_qty2">Quantity-200</string>
    <string name="product_price2">Rs 2600.00</string>
    <string name="product_delete2">Delete</string>
    <string name="product_update2">Update</string>
    <string name="itemUpdate">Update Item</string>
    <string name="imageUpload">Upload the image</string>
    <string name="nameProduct3">Product Name</string>
    <string name="descriptionProduct3">Product Description</string>
    <string name="quantityProduct3">Quantity</string>
    <string name="priceProduct3">Price</string>
    <string name="updateProduct">ADD</string>
    <string name="app_name4">Order Confirmation</string>
    <string name="Description">Coconut Fractionated Oil Perfect for moisturising and massage High Quality</string>
    <string name="Order_summary">Order Summary</string>
    <string name="Item_Cost">"Item Cost          :               Rs.4500        "</string>
    <string name="Shipping_Cost">Shipping Cost   :               Rs.1500</string>
    <string name="Total_Cost">Total Cost         :               Rs.6000</string>
    <string name="app_name7">My New App</string>
    <string name="app_name2">My Application</string>
    <string name="LemonTea">Lemon Tea</string>
    <string name="pure_tea">"Pure Ceylon Tea with a dash of vanilla; a true recipe for relaxation.A cup of Susen’s natural vanilla flavoured tea will help you rediscover comfort and is best enjoyed with the company of loved ones as a dessert tea. "</string>
    <string name="price">price- Rs 1900.00</string>
    <string name="AddCart">Add to Cart</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyCart">My Cart</string>
    <string name="ADD">ADD</string>
    <string name="product_name">product name-lemon_tea</string>
    <string name="QTY">quantity-  -1+</string>
    <string name="PRICE">price-1500.00</string>
    <string name="remove">remove</string>
    <string name="ProductName_black_tea">Product Name -black_tea</string>
    <string name="Quantity">Quantity  -3+</string>
    <string name="price1">Rs 4200.00</string>
    <string name="Remove1">Remove</string>
    <string name="ProductName_strawberry_tea">Product Name -strawberry_tea</string>
    <string name="Quantity2">Quantity  -2+</string>
    <string name="price2">Rs 2600.00</string>
    <string name="Remove2">Remove</string>
    <string name="Name">Name D.H.M.A.K.P</string>
    <string name="Email">E.mail - poornima@gmail.com</string>
    <string name="My_cart">My Cart</string>
    <string name="Pay_now">Pay Now</string>
    <string name="SignUp">Sign Up</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Re_password">Re-password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="app_name9">Payment</string>
    <string name="Visa">VISA</string>
    <string name="Mastercard">MasterCard</string>
    <string name="Card_holder_name">Card Holder Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Expire_Date">MM/YY</string>
    <string name="CVV">CVV</string>
    <string name="Save_Card_Details">Save Card Details</string>
    <string name="Confirm">Confirm</string>
    <string name="Susen">Susen Lemon Tea, 20 Teabags, Premium Black Tea with Lemon</string>
    <string name="Summary">Summary</string>
    <string name="Item">Item               :            Rs.3000</string>
    <string name="Shipping">Shipping        :            Rs.1500</string>
    <string name="Total">Total               :            Rs.4500</string>
    <string name="Pay">Pay</string>
    <string name="Success">Purchase Success !</string>
    <string name="Return">Return To the Home Page</string>
</resources>