<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tea1"
    tools:context=".Login">

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="@string/SignUp"
        android:textColor="#64BE7B"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signuptitle"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#38ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="28dp"
        android:hint="@string/Username"
        android:padding="28dp"
        android:textColor="#64BE7B"
        android:textColorHint="#64BE7B" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Username"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#38ffffff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="28dp"
        android:hint="@string/email"
        android:padding="28dp"
        android:textColor="#64BE7B"
        android:textColorHint="#64BE7B" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="28dp"

        android:hint="@string/Password"
        android:padding="28dp"
        android:textColor="#64BE7B"
        android:textColorHint="#64BE7B" />

    <EditText
        android:id="@+id/Repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#38ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="28dp"

        android:hint="@string/Re_password"
        android:padding="28dp"
        android:textColor="#64BE7B"
        android:textColorHint="#64BE7B" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupbtn"
        android:layout_width="242dp"
        android:layout_height="71dp"
        android:layout_below="@id/Repassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"

        android:layout_marginBottom="15dp"
        android:backgroundTint="#0E6655"
        android:text="@string/REGISTER"
        android:textSize="25dp" />




</RelativeLayout>